--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- ================== 3rd Party Fonts ================== -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic&display=swap"
@@ -62,9 +62,9 @@
 
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
-    <link rel="stylesheet" href="./assets/css/style.css" as="style" />
+    <!-- <link rel="stylesheet" href="./assets/css/style.css" as="style" /> -->
 
-    <!-- <link
+    <link
       rel="preload"
       href="./assets/css/style.css"
       as="style"
@@ -72,7 +72,7 @@
     />
     <noscript>
       <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    </noscript> -->
+    </noscript>
 
     <!-- ================== Critical CSS ================== -->
     <style></style>
