second commit - Logo Placeholder Image Optimization

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
-    <!-- <link rel="stylesheet" href="./assets/css/style.css" as="style" /> -->
+    <link rel="stylesheet" href="./assets/css/style.css" as="style" />
 
-    <link
+    <!-- <link
       rel="preload"
       href="./assets/css/style.css"
       as="style"
@@ -72,7 +72,7 @@
     />
     <noscript>
       <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    </noscript>
+    </noscript> -->
 
     <!-- ================== Critical CSS ================== -->
     <style></style>
@@ -102,20 +102,20 @@
         <div class="navbar__container container">
           <div class="nav__branding">
             <picture>
-              <!-- <source
+              <source
                 type="image/avif"
                 srcset="
-                  ./assets/images/logo-250w.avif 250w,
-                  ./assets/images/logo-500w.avif 500w
+                  ./assets/images/logo-placeholder-250w.avif 250w,
+                  ./assets/images/logo-placeholder-500w.avif 500w
                 "
               />
               <source
                 type="image/webp"
                 srcset="
-                  ./assets/images/logo-250w.webp 250w,
-                  ./assets/images/logo-500w.webp 500w
+                  ./assets/images/logo-placeholder-250w.webp 250w,
+                  ./assets/images/logo-placeholder-500w.webp 500w
                 "
-              /> -->
+              />
 
               <img
                 class="nav__logo"
@@ -3018,20 +3018,20 @@
         <div class="footer__content">
           <div class="nav__branding">
             <picture>
-              <!-- <source
+              <source
                 type="image/avif"
                 srcset="
-                  ./assets/images/logo-250w.avif 250w,
-                  ./assets/images/logo-500w.avif 500w
+                  ./assets/images/logo-placeholder-250w.avif 250w,
+                  ./assets/images/logo-placeholder-500w.avif 500w
                 "
               />
               <source
                 type="image/webp"
                 srcset="
-                  ./assets/images/logo-250w.webp 250w,
-                  ./assets/images/logo-500w.webp 500w
+                  ./assets/images/logo-placeholder-250w.webp 250w,
+                  ./assets/images/logo-placeholder-500w.webp 500w
                 "
-              /> -->
+              />
 
               <img
                 class="nav__logo"
