second commit - Again Header Changes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- ================== 3rd Party Fonts ================== -->
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic&display=swap"
@@ -60,6 +60,9 @@
       />
     </noscript>
 
+    <!-- ================== 3rd Party JS - Header ================== -->
+    <script defer src="./assets/js/modules/lozad.min.js"></script>
+
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
     <link rel="stylesheet" href="./assets/css/style.css" as="style" />
@@ -76,9 +79,6 @@
 
     <!-- ================== Critical CSS ================== -->
     <style></style>
-
-    <!-- ================== 3rd Party JS - Header ================== -->
-    <script defer src="./assets/js/modules/lozad.min.js"></script>
   </head>
   <body>
     <!-- ================== Header ================== -->
