--- a/index.html
+++ b/index.html
@@ -21,24 +21,6 @@
     <!-- ================== Favicon ================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <!-- ================== 3rd Party Fonts ================== -->
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic&display=swap"
-      as="style"
-      onload='this.onload=null; this.rel="stylesheet"'
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic:wght@200..900&display=swap"
-        as="style"
-      />
-    </noscript>
-
     <!-- ================== Remix Icons ================== -->
     <link
       rel="preload"
@@ -66,7 +48,6 @@
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
     <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-
     <!-- <link
       rel="preload"
       href="./assets/css/style.css"
@@ -76,6 +57,24 @@
     <noscript>
       <link rel="stylesheet" href="./assets/css/style.css" as="style" />
     </noscript> -->
+
+    <!-- ================== 3rd Party Fonts ================== -->
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic&display=swap"
+      as="style"
+      onload='this.onload=null; this.rel="stylesheet"'
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic:wght@200..900&display=swap"
+        as="style"
+      />
+    </noscript>
 
     <!-- ================== Critical CSS ================== -->
     <style></style>
