second commit - More Changes x3

--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
       />
     </noscript>
 
-    <!-- ================== 3rd Party JS - Header ================== -->
-    <script defer src="./assets/js/modules/lozad.min.js"></script>
+
 
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
-    <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    <!-- <link
+    <!-- <link rel="stylesheet" href="./assets/css/style.css" as="style" /> -->
+    <link
       rel="preload"
       href="./assets/css/style.css"
       as="style"
@@ -74,11 +73,14 @@
     />
     <noscript>
       <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    </noscript> -->
+    </noscript>
 
 
     <!-- ================== Critical CSS ================== -->
     <style></style>
+
+    <!-- ================== 3rd Party JS - Header ================== -->
+    <script defer src="./assets/js/modules/lozad.min.js"></script>
   </head>
   <body>
     <!-- ================== Header ================== -->
