second commit - More Changes x4

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
-    <!-- <link rel="stylesheet" href="./assets/css/style.css" as="style" /> -->
-    <link
+    <link rel="stylesheet" href="./assets/css/style.css" as="style" />
+    <!-- <link
       rel="preload"
       href="./assets/css/style.css"
       as="style"
@@ -73,7 +73,7 @@
     />
     <noscript>
       <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    </noscript>
+    </noscript> -->
 
 
     <!-- ================== Critical CSS ================== -->
