second commit - More Changes x5

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
     <style></style>
 
     <!-- ================== 3rd Party JS - Header ================== -->
-    <script defer src="./assets/js/modules/lozad.min.js"></script>
   </head>
   <body>
     <!-- ================== Header ================== -->
@@ -3127,7 +3126,11 @@
     </a>
 
     <!-- ================== Main JS ================== -->
-    <script src="./assets/js/_lazy_load_image.js"></script>
+
     <script src="./assets/js/script.js" type="module"></script>
+
+    <script src="./assets/js/modules/lozad.min.js"></script>
+    <script src="./assets/js/_lazy_load_image.js"></script>
+
   </body>
 </html>
