--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- ================== 3rd Party Fonts ================== -->
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic&display=swap"
