--- a/index.html
+++ b/index.html
@@ -1,85 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Dental Clinic in USA" />
-    <meta name="author" content="Hassan Shahzad" />
-    <meta name="keywords" content="online medical services" />
+    <meta name="description" content="Dental Clinic in USA">
+    <meta name="author" content="Hassan Shahzad">
+    <meta name="keywords" content="online medical services">
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="index.html">
 
     <!-- ================== Document Title ================== -->
     <title>Online Medical Services</title>
 
     <!-- ================== Favicon ================== -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
-    <!-- ================== 3rd Party Fonts ================== -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
-    <link rel="preload" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic&display=swap"
-      as="style"
-      onload='this.onload=null; this.rel="stylesheet"'
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&family=Didact+Gothic:wght@200..900&display=swap"
-        as="style"
-      />
-    </noscript>
-
-    <!-- ================== Remix Icons ================== -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
-      integrity="sha512-MqL4+Io386IOPMKKyplKII0pVW5e+kb+PI/I3N87G3fHIfrgNNsRpzIXEi+0MQC0sR9xZNqZqCYVcC61fL5+Vg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-      onload='this.onload=null; this.rel="stylesheet"'
-      as="style"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
-        integrity="sha512-MqL4+Io386IOPMKKyplKII0pVW5e+kb+PI/I3N87G3fHIfrgNNsRpzIXEi+0MQC0sR9xZNqZqCYVcC61fL5+Vg=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-        as="style"
-      />
-    </noscript>
-
-
+    <link rel="preload" href="https://fonts.gstatic.com" crossorigin="">
+    <!-- ================== Critical CSS ================== -->
 
     <!-- ================== Main CSS ================== -->
     <!-- <link rel="preload" href="./assets/css/style.css" as="style" /> -->
-    <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    <!-- <link
-      rel="preload"
-      href="./assets/css/style.css"
-      as="style"
-      onload='this.onload=null; this.rel="stylesheet"'
-    />
+    <!-- <link rel="stylesheet" href="./assets/css/style.css" as="style" /> -->
+    <style>.heading{font-family:"Didact Gothic",sans-serif;color:#073635;margin:0;line-height:1.3;letter-spacing:.03rem}.heading--center{text-align:center;max-width:100%}.heading--sub{letter-spacing:.05rem;font-weight:900;font-size:.9rem;text-transform:uppercase}h1{font-size:2rem}h2{font-size:1.6875rem}h3{font-size:1.375rem}:root{font-size:1rem}@media (min-width:400px) and (max-width:1400px){:root{font-size:clamp(1rem,.2vw + .95rem,1.125rem)}h1{font-size:clamp(2rem,1vw + 1.75rem,2.625rem)}h2{font-size:clamp(1.6875rem,.8vw + 1.4875rem,2.1875rem)}h3{font-size:clamp(1.375rem,.4vw + 1.275rem,1.625rem)}}*,::after,::before{padding:0;margin:0;box-sizing:border-box}html{-webkit-text-size-adjust:100%;-moz-tab-size:4;-o-tab-size:4;tab-size:4;font-feature-settings:normal;font-variation-settings:normal;scroll-behavior:smooth}body{font-family:Assistant,sans-serif;font-size:1rem;font-weight:300;line-height:1.75;letter-spacing:.02rem}body,html{display:block;overflow-x:hidden;color:#161a1d}p{margin:.6rem 0}a{text-decoration:none;color:#49e9e6}ul.style-none{list-style:none}img{display:block;max-width:100%;height:auto}::-webkit-selection{color:#f1f1f1;background:#1f1f1f}::-webkit-scrollbar{width:.6rem;background:#4c4c4c}::-webkit-scrollbar-thumb{background:#333;border-radius:100px}::-webkit-scrollbar-thumb:hover{background:#262626}.container{max-width:100%;padding:0 1rem;margin:0 auto}.section__ptx2{padding-block-start:calc(clamp(3.75rem,0.25vw,6.25rem) * 2)}.section__pb{padding-block-end:calc(clamp(3.75rem,0.25vw,6.25rem) * 1)}.section__py{padding-block:calc(clamp(3.75rem,0.25vw,6.25rem) * 1)}.grid{display:grid;row-gap:2rem;grid-template-columns:repeat(1,1fr)}.grid>*{max-width:100%}.flex{display:flex;flex-direction:column;align-items:center;gap:1.5rem}@media screen and (min-width:640px){.container{max-width:640px}}@media screen and (min-width:768px){.container{max-width:768px}}.navbar{z-index:100;width:100%}.navbar__fixed{position:fixed;top:0;left:0}.navbar .container{position:relative;height:3.5rem;display:flex;justify-content:space-between;align-items:center}.navbar .nav__branding{position:relative;overflow:hidden;height:2.3333333333rem;aspect-ratio:4}.navbar .nav__branding .nav__logo{width:100%;height:100%}.navbar .nav__branding img.nav__logo{position:absolute;-o-object-fit:cover;object-fit:cover;-o-object-position:center center;object-position:center center;inset:0}.navbar .nav__close,.navbar .nav__toggle{display:flex;font-size:1.5rem}.navbar .nav__close i,.navbar .nav__toggle i{color:#000}.navbar .nav__list,.navbar .nav__social{display:flex;justify-content:space-evenly;gap:1rem}.navbar .nav__list{flex-direction:column;align-items:center;gap:3rem}.navbar .nav__link{font-size:1.3rem!important;font-weight:300;color:#e8fcfc}.navbar .nav__close{position:absolute;top:1.5rem;right:1.5rem}.navbar .nav__close i{color:#fff}.navbar .nav__social{gap:1rem;align-self:flex-end}.navbar .nav__social .nav__social-link{color:#e8fcfc;font-size:1.3rem}@media screen and (max-width:1023px){.navbar .nav__menu{position:fixed;left:-100%;top:0;background-color:#073635;padding:8rem 1.5rem 2.5rem 4rem;width:100%;height:100%;display:flex;flex-direction:column;justify-content:space-between}.navbar .nav__list{flex-direction:column;align-items:start}.navbar .nav__list .btn{background:#90f1ef;color:#073635}}@media screen and (min-width:1024px){.container{max-width:1024px}.navbar .nav__branding{height:1.8rem}.navbar .container{height:4.5rem;padding:0 2rem;border-radius:50px}.navbar .nav__close,.navbar .nav__toggle{display:none}.navbar .nav__link{font-size:1.05rem!important;font-weight:400;color:#000}.navbar .nav__menu{display:flex;align-items:center;gap:3rem}.navbar .nav__list{flex-direction:row;gap:1.5rem}.navbar .nav__social{display:none}}.hero__btn__group{width:100%;min-height:-moz-fit-content;min-height:fit-content;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:1rem}.btn{font-family:Assistant,sans-serif;font-size:.95rem;font-weight:400;letter-spacing:.1rem;border-radius:.12rem;height:2.5rem;padding:8px 20px;display:inline-flex;justify-content:center;align-items:center;outline:0;border:none;box-shadow:none;text-align:center}.btn__block{width:100%}.btn__md{height:3rem;padding:8px 30px}.btn__rounded{border-radius:.25rem}.btn__rounded-circle{border-radius:3.125rem}.btn__primary{position:relative;background:#073635}.btn__primary.btn__hover-shine{overflow:hidden}.btn__primary.btn__hover-shine::before{content:"";position:absolute;width:100%;height:100%;background-image:linear-gradient(120deg,rgba(255,255,255,0) 25%,rgba(73,233,230,.5),rgba(255,255,255,0) 60%);top:0;left:-100px;opacity:.6}.btn__accent{position:relative;background:#fff;color:#000}@media (min-width:520px) and (max-width:767px){.hero__btn__group{flex-direction:row;justify-content:start;align-items:center}.hero__btn__group .btn{width:100%}}@media (min-width:768px) and (max-width:1023px){.hero__btn__group{flex-direction:row;justify-content:start;align-items:center}.hero__btn__group .btn{width:-moz-fit-content;width:fit-content;font-size:.85rem}}@media (min-width:1023px){.hero__btn__group{display:flex;flex-direction:row;justify-content:start;align-items:center}.hero__btn__group .btn{width:-moz-fit-content;width:fit-content}}.header__bg{position:absolute;width:100%;height:100%;background:var(--section-bg);overflow:hidden}header{position:relative}header .header__hero-waves{display:flex;position:absolute;min-height:50px;max-height:auto;width:100%;bottom:-1%;right:0;z-index:2}header .header__hero-waves .fill-color{fill:#ffffff;fill-opacity:1}header .header__hero-container{position:relative;display:flex;flex-direction:column;gap:2.5rem}header .header__hero-container .header__hero-content{position:relative;height:100%;max-width:100%}header .header__hero-container .header__hero-content.header__hero-one{display:flex;flex-direction:column;gap:.6rem;z-index:3}header .header__hero-container .header__hero-content.header__hero-one .hero__btn__group{margin-top:.6rem}header .header__hero-container .header__hero-content.header__hero-two #circle__element,header .header__hero-container .header__hero-content.header__hero-two #square-boxes__element{position:absolute;aspect-ratio:1/1;z-index:0}header .header__hero-container .header__hero-content.header__hero-two #circle__element{min-height:-moz-fit-content;min-height:fit-content;width:80%;top:50%;right:50%;transform:translate(55%,-50%)}header .header__hero-container .header__hero-content.header__hero-two #circle__element .cls-1{fill:#f5f3f4}header .header__hero-container .header__hero-content.header__hero-two #square-boxes__element{min-height:-moz-fit-content;min-height:fit-content;width:40%;top:48%;left:40%;transform:translate(-80%,-80%)}header .header__hero-container .header__hero-content.header__hero-two #square-boxes__element .cls-1{fill:#139f9d}header .header__hero-container .header__hero-content.header__hero-two .image__wrapper{position:relative;aspect-ratio:1/1;z-index:1}.about .about__container .about__col-content{display:flex;flex-direction:column;justify-content:space-between;align-items:center;gap:.4rem;background:#ebfcfc;box-shadow:0 37px 100px -50px rgba(0,0,0,.11);padding:2rem 20px;border-radius:12px}.about .about__container .about__col-content.about__col-secure{background:#dbfbfa}.about .about__container .about__col-content .icon svg{width:120px;aspect-ratio:1/1}.about .about__container .about__col-content .icon svg#specialist-icon .st0{fill:#fcd2b4}.about .about__container .about__col-content .icon svg#specialist-icon .st1{fill:#1ce4e0}.about .about__container .about__col-content .icon svg#specialist-icon .st2{fill:#79eeec}.about .about__container .about__col-content .icon svg#specialist-icon .st3{fill:#139f9d}.about .about__container .about__col-content .icon svg#secure-icon .cls-1{fill:#e7e7e7}.about .about__container .about__col-content .icon svg#secure-icon .cls-2{fill:#ced0d0}.about .about__container .about__col-content .icon svg#secure-icon .cls-3{fill:#426572}.about .about__container .about__col-content .icon svg#secure-icon .cls-4,.about .about__container .about__col-content .icon svg#secure-icon .cls-8{fill:#fff}.about .about__container .about__col-content .icon svg#secure-icon .cls-5{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px}.about .about__container .about__col-content .icon svg#secure-icon .cls-6{fill:#49e9e6}.about .about__container .about__col-content .icon svg#secure-icon .cls-7{fill:#8df1ef}.about .about__container .about__col-content .icon svg#secure-icon .cls-8{font-size:155.97px;font-family:Dosis-ExtraBold,Dosis;font-weight:700}.about .about__container .about__col-content .icon svg#customers-icon .cls-1{fill:#e9faff}.about .about__container .about__col-content .icon svg#customers-icon .cls-2{fill:#e3bab1}.about .about__container .about__col-content .icon svg#customers-icon .cls-3{fill:#ffe5e1}.about .about__container .about__col-content .icon svg#customers-icon .cls-4{fill:#fff}.about .about__container .about__col-content .icon svg#customers-icon .cls-5{fill:#e8f0fc}.about .about__container .about__col-content .icon svg#customers-icon .cls-12,.about .about__container .about__col-content .icon svg#customers-icon .cls-6{fill:none;stroke:#556193;stroke-width:2px}.about .about__container .about__col-content .icon svg#customers-icon .cls-6{stroke-miterlimit:10}.about .about__container .about__col-content .icon svg#customers-icon .cls-7{fill:#49e9e6}.about .about__container .about__col-content .icon svg#customers-icon .cls-8{fill:#16b6b3}.about .about__container .about__col-content .icon svg#customers-icon .cls-9{fill:#073635}.about .about__container .about__col-content .icon svg#customers-icon .cls-10{fill:#ffd9d2}.about .about__container .about__col-content .icon svg#customers-icon .cls-11{fill:#556193}.about .about__container .about__col-content .icon svg#customers-icon .cls-12{stroke-linejoin:round}.about .about__container .about__col-content .icon svg#customers-icon .cls-13{fill:#ff859e}.about .about__container .about__col-content .icon svg#customers-icon .cls-14{fill:#f97594}.about .about__container .about__col-content .icon svg#customers-icon .cls-15{fill:#ffd0ca}.about .about__container .about__col-content .icon svg#customers-icon .cls-16{fill:#acbaea}.about .about__container .about__col-content .icon svg#customers-icon .cls-17{fill:#ffcba4}.about .about__container .about__col-content .icon svg#chat-icon .st0{fill:rgba(73,233,230,0.8)}.about .about__container .about__col-content .icon svg#chat-icon .st1{fill:#16b6b3}.about .about__container .about__col-content .icon svg#chat-icon .st2{fill:#ffffff}.about .about__container .about__col-content .content{text-align:center}.onlinechat .onlinechat__container{gap:2.5rem}.onlinechat .onlinechat__container .onlinechat__col-content{display:flex;flex-direction:column;gap:.5rem}.onlinechat .onlinechat__container .onlinechat__col-content.onlinechat__col-one{justify-content:center;align-items:center}.onlinechat .onlinechat__container .onlinechat__col-content.onlinechat__col-one .image__wrapper{width:80%;aspect-ratio:1/1;z-index:1}.onlinechat .onlinechat__container .onlinechat__col-content.onlinechat__col-one .image__wrapper img{border-radius:100%}@media screen and (min-width:768px){header .header__hero-container{flex-direction:row;align-items:end}header .header__hero-container .header__hero-one{flex:1.5 0;padding:0 0 15%}header .header__hero-container .header__hero-two{flex:1 0}.about .about__container{-moz-column-gap:0.6rem;column-gap:.6rem;grid-template-columns:repeat(2,1fr)}.onlinechat .onlinechat__container{gap:3.5rem}}@media screen and (min-width:1024px){.onlinechat .onlinechat__container{flex-direction:row;align-items:center;gap:2rem}.onlinechat .onlinechat__container>*{flex:1 0;max-width:100%}}@media screen and (min-width:1280px){.container{max-width:1280px}header .header__hero-container{align-items:center}header .header__hero-container .header__hero-one{flex:1 0;margin:-15% 0 0;padding:0}header .header__hero-container .header__hero-two{flex:1 0}.about .about__container{-moz-column-gap:1.5rem;column-gap:1.5rem;grid-template-columns:repeat(4,1fr)}}@font-face{font-family:Assistant;font-style:normal;font-weight:200;font-display:swap;src:url(https://fonts.gstatic.com/s/assistant/v19/2sDPZGJYnIjSi6H75xkZZE1I0yCmYzzQtmZnEGE.ttf) format('truetype')}@font-face{font-family:Assistant;font-style:normal;font-weight:300;font-display:swap;src:url(https://fonts.gstatic.com/s/assistant/v19/2sDPZGJYnIjSi6H75xkZZE1I0yCmYzzQtrhnEGE.ttf) format('truetype')}@font-face{font-family:Assistant;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/assistant/v19/2sDPZGJYnIjSi6H75xkZZE1I0yCmYzzQtuZnEGE.ttf) format('truetype')}@font-face{font-family:Assistant;font-style:normal;font-weight:500;font-display:swap;src:url(https://fonts.gstatic.com/s/assistant/v19/2sDPZGJYnIjSi6H75xkZZE1I0yCmYzzQttRnEGE.ttf) format('truetype')}@font-face{font-family:Assistant;font-style:normal;font-weight:600;font-display:swap;src:url(https://fonts.gstatic.com/s/assistant/v19/2sDPZGJYnIjSi6H75xkZZE1I0yCmYzzQtjhgEGE.ttf) format('truetype')}@font-face{font-family:'Didact Gothic';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/didactgothic/v20/ahcfv8qz1zt6hCC5G4F_P4ASpUw.ttf) format('truetype')}@font-face{font-family:remixicon;src:url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.eot?t=1708865856766);src:url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.eot?t=1708865856766#iefix) format('embedded-opentype'),url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.woff2?t=1708865856766) format("woff2"),url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.woff?t=1708865856766) format("woff"),url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.ttf?t=1708865856766) format('truetype'),url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.svg?t=1708865856766#remixicon) format('svg');font-display:swap}[class^=ri-]{font-family:remixicon!important;font-style:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.ri-apps-2-line:before{content:"\ea42"}.ri-facebook-circle-fill:before{content:"\ecba"}.ri-instagram-line:before{content:"\ee66"}.ri-twitter-x-fill:before{content:"\f3e6"}.ri-close-large-line:before{content:"\f4c8"}.st0{fill:#e25d55}.st1{fill:#db3429}.st2{fill:#b24e10}.st3{fill:#f7c9ab}</style>
+    <link rel="preload" href="./assets/css/style.css" as="style" onload="this.onload=null; this.rel=&quot;stylesheet&quot;">
     <noscript>
-      <link rel="stylesheet" href="./assets/css/style.css" as="style" />
-    </noscript> -->
+      <link rel="stylesheet" href="./assets/css/style.css" as="style">
+    </noscript>
 
+    <!-- ================== 3rd Party Fonts ================== -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&amp;family=Didact+Gothic&amp;display=swap" as="style" onload="this.onload=null; this.rel=&quot;stylesheet&quot;">
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..600&amp;family=Didact+Gothic:wght@200..900&amp;display=swap" as="style">
+    </noscript>
 
-    <!-- ================== Critical CSS ================== -->
-    <style></style>
-
-    <!-- ================== 3rd Party JS - Header ================== -->
+    <!-- ================== Remix Icons ================== -->
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" integrity="sha512-MqL4+Io386IOPMKKyplKII0pVW5e+kb+PI/I3N87G3fHIfrgNNsRpzIXEi+0MQC0sR9xZNqZqCYVcC61fL5+Vg==" crossorigin="anonymous" referrerpolicy="no-referrer" onload="this.onload=null; this.rel=&quot;stylesheet&quot;" as="style">
+    <noscript>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" integrity="sha512-MqL4+Io386IOPMKKyplKII0pVW5e+kb+PI/I3N87G3fHIfrgNNsRpzIXEi+0MQC0sR9xZNqZqCYVcC61fL5+Vg==" crossorigin="anonymous" referrerpolicy="no-referrer" as="style">
+    </noscript>
   </head>
   <body>
     <!-- ================== Header ================== -->
@@ -3131,6 +3096,5 @@
 
     <script src="./assets/js/modules/lozad.min.js"></script>
     <script src="./assets/js/_lazy_load_image.js"></script>
-
   </body>
 </html>
