--- a/index.html
+++ b/index.html
@@ -3052,18 +3052,18 @@
             <li>
               <div class="nav__social">
                 <a
-                  href="https://www.instagram.com/techcoderlab/"
+                  href="https://www.facebook.com/blueriowebdesigns/"
                   target="_blank"
                   class="nav__social-link"
-                  aria-label="Visit my instagram profile"
+                  aria-label="Visit my Facebook profile"
                 >
                   <i class="ri-facebook-circle-fill"></i>
                 </a>
                 <a
-                  href="https://www.facebook.com/chassanshahzadofficial"
+                  href="https://www.instagram.com/blueriowebdesigns/"
                   target="_blank"
                   class="nav__social-link"
-                  aria-label="Visit my facebook profile"
+                  aria-label="Visit my Instagram profile"
                 >
                   <i class="ri-instagram-line"></i>
                 </a>
@@ -3071,7 +3071,7 @@
                   href="https://twitter.com/chassanshahzad"
                   target="_blank"
                   class="nav__social-link"
-                  aria-label="Visit my X profile"
+                  aria-label="Visit my Twitter X profile"
                 >
                   <i class="ri-twitter-x-fill"></i>
                 </a>
