Social links - footer

--- a/index.html
+++ b/index.html
@@ -3056,6 +3056,7 @@
                   target="_blank"
                   class="nav__social-link"
                   aria-label="Visit my Facebook profile"
+                  rel="nofollow"
                 >
                   <i class="ri-facebook-circle-fill"></i>
                 </a>
@@ -3064,6 +3065,7 @@
                   target="_blank"
                   class="nav__social-link"
                   aria-label="Visit my Instagram profile"
+                  rel="nofollow"
                 >
                   <i class="ri-instagram-line"></i>
                 </a>
@@ -3072,6 +3074,7 @@
                   target="_blank"
                   class="nav__social-link"
                   aria-label="Visit my Twitter X profile"
+                  rel="nofollow"
                 >
                   <i class="ri-twitter-x-fill"></i>
                 </a>
@@ -3119,7 +3122,23 @@
         </div>
       </div>
       <span class="footer__copy">
-        &#169; Hassan Shahzad. All rigths reserved
+        <a
+          href="https://www.facebook.com/blueriowebdesigns/"
+          target="_blank"
+          class="nav__social-link"
+          aria-label="Visit my Facebook profile"
+          rel="nofollow"
+        >
+          &#169; Blue Rio Web Designs </a
+        >. Created by
+        <a
+          href="https://www.linkedin.com/in/chassanshahzad/"
+          target="_blank"
+          class="nav__social-link"
+          aria-label="Visit my Linkedin profile"
+          rel="nofollow"
+          >Hassan Shahzad</a
+        >
       </span>
     </footer>
 
