Social links - nav

--- a/index.html
+++ b/index.html
@@ -166,18 +166,20 @@
 
             <div class="nav__social">
               <a
-                href="https://www.instagram.com/techcoderlab/"
+                href="https://www.facebook.com/blueriowebdesigns/"
                 target="_blank"
                 class="nav__social-link"
-                aria-label="Visit my instagram profile"
+                aria-label="Visit my Facebook profile"
+                rel="nofollow"
               >
                 <i class="ri-facebook-circle-fill"></i>
               </a>
               <a
-                href="https://www.facebook.com/chassanshahzadofficial"
+                href="https://www.instagram.com/blueriowebdesigns/"
                 target="_blank"
                 class="nav__social-link"
-                aria-label="Visit my facebook profile"
+                aria-label="Visit my Instagram profile"
+                rel="nofollow"
               >
                 <i class="ri-instagram-line"></i>
               </a>
@@ -185,7 +187,8 @@
                 href="https://twitter.com/chassanshahzad"
                 target="_blank"
                 class="nav__social-link"
-                aria-label="Visit my X profile"
+                aria-label="Visit my Twitter X profile"
+                rel="nofollow"
               >
                 <i class="ri-twitter-x-fill"></i>
               </a>
